BZ 1069606 1100361 - turn off security manager. if we want to turn this back on, we'll need EAP to fix standalone.sh to not set -Djboss.modules.policy-permissions without a value - they need to set it "=true". The BZ will have EAP folks move that setting to standalone.conf and set it =true. For now, we'll turn off security manager though.